Velika vecina uradjena

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,9 @@ spring.mail.username=pocket.wedding23@gmail.com
 spring.mail.password=lizdfqekktdbxqzu
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+auth.github.client_id=0bbf0469ef921cf211b8
+auth.github.client_secret=ef0281f5f8861139abcdbe63c41e24604c21f880
+auth.github.redirect_uri=http://localhost:4200/callback
+auth.github.access_token_url=https://github.com/login/oauth/access_token
+auth.github.user_api=https://api.github.com/user
